# todo_app_remake

./: docker-compose.yml
api/: Dockerfile  db.sqlite3  pyproject.toml
api/home/: admin.py  custom_permission.py  custom_token.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
api/home/migrations/: 0001_initial.py
api/home/templates/login/: login.html  register.html
api/myapp/: router.py  settings.py  urls.py
conf.d/: default.conf
public/: Dockerfile
ssl/: cer.crt  localca.crt  localca.pem  req.csr  rsa.key
